--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script defer type="module" src="main.js"></script>
+    <script defer type="module" src="test/c.js"></script>
 </head>
 <body>
-    <demo-element></demo-element>
+    <loop-test></loop-test>
 </body>
 </html>
