handling loops with virtual dom

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <script defer type="module" src="main.js"></script>
 </head>
-<body>
+<body style="background: black; color: white">
     <loop-test></loop-test>
 </body>
 </html>
