--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script defer type="module" src="main.js"></script>
 </head>
 <body style="background: black; color: white">
+    <t-comp></t-comp>
     <loop-test></loop-test>
 </body>
 </html>
