comp states stored globaly ?

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body style="background: black; color: white">
     <t-comp></t-comp>
+    <t-comp></t-comp>
     <loop-test></loop-test>
 </body>
 </html>
