--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body style="background: black; color: white">
     <simple-counter></simple-counter>
+    <!-- <t-comp></t-comp>
     <t-comp></t-comp>
-    <t-comp></t-comp>
-    <loop-test></loop-test>
+    <loop-test></loop-test> -->
 </body>
 </html>
